新增websocket服务示例

--- a/template/src/static/chat-room.html
+++ b/template/src/static/chat-room.html
@@ -5,8 +5,9 @@
   <title>迷你聊天室</title>
 </head>
 <body>
-<p>聊天内容：<input type="text" name="content" /></p>
-<input type="button" value="发送" id="send" />
+<h1>迷你聊天室</h1>
+<p>聊天内容：<input type="text" name="content" /> <input type="button" value="发送" id="send" /></p>
+
 <div class="content">
 
 </div>
