新增websocket服务示例

--- a/template/src/pages/index.ejs
+++ b/template/src/pages/index.ejs
@@ -5,8 +5,9 @@
   <title>Title</title>
 </head>
 <body>
-  <p style="text-align: center;line-height: 5; font-size: 40px">
+  <div style="text-align: center;line-height: 5; font-size: 40px">
     hello, world!
-  </p>
+		<p><a href="/pages/chat-room">去聊天室逛逛吧</a></p>
+  </div>
 </body>
 </html>
