--- a/template/src/pages/chat-room.ejs
+++ b/template/src/pages/chat-room.ejs
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>迷你聊天室</title>
+  <title>迷你IM</title>
 </head>
 <body>
-<h1>迷你聊天室</h1>
+<h1>迷你IM</h1>
 <p>聊天内容：<input type="text" name="content" /> <input type="button" value="发送" id="send" /></p>
 
 <div class="content">
