--- a/template/src/pages/index.ejs
+++ b/template/src/pages/index.ejs
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>动态首页</title>
+  <style>
+    .hello {
+      text-align: center;
+      line-height: 5;
+      font-size: 40px;
+    }
+  </style>
 </head>
 <body>
-  <div style="text-align: center;line-height: 5; font-size: 40px">
-    hello, world!
+  <div class="hello">
+    hello, world! 动态首页
 		<p><a href="/pages/chat-room">去聊天室逛逛吧</a></p>
   </div>
 </body>
