--- a/template/src/pages/chat-room.html
+++ b/template/src/pages/chat-room.html
@@ -14,30 +14,30 @@
 </body>
 <script type="text/javascript">
   /* 封装 WebSocket 实例化的方法  */
-  var initWebSocket = (function () {
+  let initWebSocket = (function () {
     return function (urlValue) {
-      if(window.WebSocket) return new WebSocket(urlValue);
-      if(window.MozWebSocket) return new MozWebSocket(urlValue);
+      if(window.WebSocket) return new WebSocket(urlValue)
+      if(window.MozWebSocket) return new MozWebSocket(urlValue)
       return false;
     }
   })();
-  var $ = function (select) {
+  let $ = function (select) {
     return document.querySelector(select)
   }
-  var webSocket = initWebSocket("ws://localhost:9999/websocket");
+  let webSocket = initWebSocket("ws://localhost:9999/websocket")
   webSocket.onmessage = function (msg) {
     let p = document.createElement('P')
     p.innerHTML = msg.data
     $('.content').appendChild(p)
-  };
+  }
   webSocket.onclose = function () {
-    console.log("关闭连接");
-  };
+    console.log("关闭连接")
+  }
   $("#send").onclick = function () {
     let $content = $('input[name=content]')
     webSocket.send(JSON.stringify({
       content: $content.value
-    }));
+    }))
     $content.value = ''
   }
 </script>
