--- a/template/src/static/index.html
+++ b/template/src/static/index.html
@@ -15,10 +15,10 @@
 <div class="hello">
   hello, world! 静态首页
   <p><a href="/pages/chat-room">去聊天室逛逛吧</a></p>
-  <form action="/api/user/list" method="post">
-    <input type="text" name="test" value="111">
-    <input type="submit" value="submit">
-  </form>
+  <!--<form action="/api/user/list" method="post">-->
+    <!--<input type="text" name="test" value="111">-->
+    <!--<input type="submit" value="submit">-->
+  <!--</form>-->
 </div>
 </body>
 </html>
