--- a/template/src/pages/index.html
+++ b/template/src/pages/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="hello">
     hello, world! 动态首页
-		<p><a href="/pages/chat-room">去聊天室逛逛吧</a></p>
+		<p><a href="/chat-room">去聊天室逛逛吧</a></p>
   </div>
 </body>
 </html>
