新增： controller监听，自动完成controller模板创建

--- a/template/src/pages/chat-room.html
+++ b/template/src/pages/chat-room.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <h1>迷你IM</h1>
+<p style="color: #aaa; font-size: 12px">PS: 复制当前地址，打开另外一个浏览器标签访问看看</p>
 <p>聊天内容：<input type="text" name="content"/> <input type="button" value="发送" id="send"/></p>
 
 <div class="content">
